# oo_amxx

./: .gitignore  AMBuildScript  AMBuilder  CMakeLists.txt  CMakeSettings.json  HOOK.md  LICENSE  README.md  configure.py
.github/workflows/: build.yml
inc/: am-stack.h  assembly_create.h  memory_.h  moduleconfig.h  oo_class.h  oo_defs.h  oo_forward.h  oo_manager.h  oo_natives.h  oo_object.h  oo_policies.h  oo_utils.h
plugins/: README.md  contagion.sma  manager.pwn  player.pwn  playerclass.pwn  utils.pwn
plugins/compiled/: contagion.amxx
plugins/include/: contagion_const.inc  oo.inc  oo_macros.inc
plugins/playerclass/: human.pwn
scripting/: oo_animal.sma  oo_hook.sma  oo_multiple_inheritance.sma
scripting/include/: oo.inc
src/: assembly_create.cpp  oo_amxx.cpp  oo_forward.cpp  oo_manager.cpp  oo_natives.cpp  oo_utils.cpp
tests/: README.md  contagion.sma  oo_animal.sma  oo_class.sma  oo_class_and_objects.sma  oo_inheritance.sma  oo_multiple_inheritance.sma  oo_polymorphism.sma  oo_test.sma  test.cpp  test.py
tests/include/: oo.inc
